Hamkorlik va xizmatlar bo'limi

--- a/Index.html
+++ b/Index.html
@@ -56,10 +56,10 @@
 						<a href="#">Masofaviy ta’lim</a>
 					</li>
 					<li class="nav-link">
-						<a href="#"><h6 style="color:orange;"><span><b>Qabul-2020</b></span></h6></a>
+						<a href="#"><h6 style="color:orange;"><span><b>Hamkorlik</b></span></h6></a>
 					</li>
 					<li class="nav-link">
-						<a href="#"><h6 style="color:tomato;"><span><b>Mandat-2020</b></span></h6></a>
+						<a href="#"><h6 style="color:tomato;"><span><b>Xizmatlar</b></span></h6></a>
 					</li>
 				</ul>
 			</div>
